Registering and Tagging your Voter At this point, other than the crazy debug code I have at the bottom, our voter class is ready to go. But Symfony is not going to automatically find it. To tell Symfony about our new voter we’re going to need to register it as a service and give it a special tag.
I have an app/config/services.yml file which I’m importing from my config.yml file, so we’ll put the service there.

The name doesn’t matter but try to keep it relatively short. And the autocompleting I’m getting is from the nice Symfony2 plugin for PHPStorm. Our class doesn’t have any constructor arguments yet so I’m just leaving that key off.

The really important part is tags. You need to add one tag whose name is security.voter. This is like raising our hand for our voter and saying: 'Hey Symfony, whenever somebody calls isGranted I want our voter to actually be called.'

So we have the voter, we have the service with the tag so let’s try it out! When we refresh... Bam! We see things dumped out: proof that our voter is being called.

--- a/app/config/services.yml
+++ b/app/config/services.yml
@@ -1,1 +1,5 @@
-# put something here...
+services:
+  app.cookie_voter:
+    class: AppBundle\Security\CookieVoter
+    tags:
+      - { name: security.voter }
